--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -939,6 +939,20 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 }
 /* Constructor End */
 
+/* Pics Start */
+#pics {
+  padding-top: 1px;
+  padding-bottom: 100px;
+  background: @block-primary-background;
+  h1 {
+    font-size: 48px;
+    color: @custom-text-contrast-color;
+    margin: 1.5em 0;
+  }
+}
+
+/* Pics End */
+
 
 
 /* Home Page End */
