--- a/uikit-2.27.4/css/components/accordion.css
+++ b/uikit-2.27.4/css/components/accordion.css
@@ -1,4 +1,3 @@
-/*! UIkit 2.27.4 | http://www.getuikit.com | (c) 2014 YOOtheme | MIT License */
 /* ========================================================================
    Component: Accordion
  ========================================================================== */
@@ -8,7 +7,7 @@
   margin-top: 0;
   margin-bottom: 15px;
   padding: 5px 15px;
-  background: #eee;
+  background: #eeeeee;
   font-size: 18px;
   line-height: 24px;
   cursor: pointer;
