--- a/uikit-2.27.4/css/components/form-advanced.css
+++ b/uikit-2.27.4/css/components/form-advanced.css
@@ -1,4 +1,3 @@
-/*! UIkit 2.27.4 | http://www.getuikit.com | (c) 2014 YOOtheme | MIT License */
 /* ========================================================================
    Component: Form advanced
    Note: Only works in Webkit at the moment
@@ -16,7 +15,7 @@
   display: inline-block;
   height: 14px;
   width: 14px;
-  border: 1px solid #aaa;
+  border: 1px solid #aaaaaa;
   /* 2 */
   overflow: hidden;
   /* 3 */
@@ -67,12 +66,12 @@
  */
 .uk-form input[type=radio]:disabled,
 .uk-form input[type=checkbox]:disabled {
-  border-color: #ddd;
+  border-color: #dddddd;
 }
 .uk-form input[type=radio]:disabled:checked:before {
-  background-color: #aaa;
+  background-color: #aaaaaa;
 }
 .uk-form input[type=checkbox]:disabled:checked:before,
 .uk-form input[type=checkbox]:disabled:indeterminate:before {
-  color: #aaa;
+  color: #aaaaaa;
 }
