--- a/uikit-2.27.4/css/components/htmleditor.css
+++ b/uikit-2.27.4/css/components/htmleditor.css
@@ -1,11 +1,10 @@
-/*! UIkit 2.27.4 | http://www.getuikit.com | (c) 2014 YOOtheme | MIT License */
 /* ========================================================================
    Component: HTML editor
  ========================================================================== */
 /* Sub-object `uk-htmleditor-navbar`
  ========================================================================== */
 .uk-htmleditor-navbar {
-  background: #eee;
+  background: #eeeeee;
 }
 /*
  * Micro clearfix
@@ -42,7 +41,7 @@
   padding: 0 15px;
   line-height: 40px;
   /* 2 */
-  color: #444;
+  color: #444444;
   font-size: 11px;
   cursor: pointer;
 }
@@ -54,19 +53,19 @@
 .uk-htmleditor-navbar-nav > li:hover > a,
 .uk-htmleditor-navbar-nav > li > a:focus {
   background-color: #f5f5f5;
-  color: #444;
+  color: #444444;
   outline: none;
   /* 2 */
 }
 /* OnClick */
 .uk-htmleditor-navbar-nav > li > a:active {
-  background-color: #ddd;
-  color: #444;
+  background-color: #dddddd;
+  color: #444444;
 }
 /* Active */
 .uk-htmleditor-navbar-nav > li.uk-active > a {
   background-color: #f5f5f5;
-  color: #444;
+  color: #444444;
 }
 /* Sub-object: `uk-htmleditor-navbar-flip`
  ========================================================================== */
@@ -82,10 +81,10 @@
 /* Sub-object `uk-htmleditor-content`
  ========================================================================== */
 .uk-htmleditor-content {
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background: #fff;
+  border-left: 1px solid #dddddd;
+  border-right: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+  background: #ffffff;
 }
 /*
  * Micro clearfix
@@ -145,7 +144,7 @@
   width: 50%;
 }
 [data-mode='split'] .uk-htmleditor-code {
-  border-right: 1px solid #eee;
+  border-right: 1px solid #eeeeee;
 }
 /* Sub-object `uk-htmleditor-iframe`
  ========================================================================== */
