--- a/uikit-2.27.4/css/components/placeholder.css
+++ b/uikit-2.27.4/css/components/placeholder.css
@@ -1,13 +1,12 @@
-/*! UIkit 2.27.4 | http://www.getuikit.com | (c) 2014 YOOtheme | MIT License */
 /* ========================================================================
    Component: Placeholder
  ========================================================================== */
 .uk-placeholder {
   margin-bottom: 15px;
-  padding: 15px;
-  border: 1px dashed #ddd;
+  padding: 20px;
+  border: 1px dashed #dddddd;
   background: #fafafa;
-  color: #444;
+  color: #444444;
 }
 /*
  * Add margin if adjacent element
