--- a/uikit-2.27.4/css/components/search.css
+++ b/uikit-2.27.4/css/components/search.css
@@ -1,4 +1,3 @@
-/*! UIkit 2.27.4 | http://www.getuikit.com | (c) 2014 YOOtheme | MIT License */
 /* ========================================================================
    Component: Search
  ========================================================================== */
@@ -73,7 +72,7 @@
   border-radius: 0;
   /* 4 */
   font: inherit;
-  color: #444;
+  color: #444444;
   /* 5 */
   -webkit-appearance: none;
   /* 6 */
@@ -88,13 +87,13 @@
 }
 /* Placeholder */
 .uk-search-field:-ms-input-placeholder {
-  color: #999 !important;
+  color: #999999 !important;
 }
 .uk-search-field::-moz-placeholder {
-  color: #999;
+  color: #999999;
 }
 .uk-search-field::-webkit-input-placeholder {
-  color: #999;
+  color: #999999;
 }
 /* Focus */
 .uk-search-field:focus {
@@ -111,7 +110,7 @@
   width: 300px;
   margin-top: 0;
   background: #f5f5f5;
-  color: #444;
+  color: #444444;
 }
 .uk-open > .uk-dropdown-search {
   -webkit-animation: uk-slide-top-fixed 0.2s ease-in-out;
@@ -130,7 +129,7 @@
  * Items
  */
 .uk-nav-search > li > a {
-  color: #444;
+  color: #444444;
 }
 /*
  * Active
@@ -138,7 +137,7 @@
  */
 .uk-nav-search > li.uk-active > a {
   background: #00a8e6;
-  color: #fff;
+  color: #ffffff;
   /* 1 */
   outline: none;
 }
@@ -146,22 +145,22 @@
  * Sub-object: `uk-nav-header`
  */
 .uk-nav-search .uk-nav-header {
-  color: #999;
+  color: #999999;
 }
 /*
  * Sub-object: `uk-nav-divider`
  */
 .uk-nav-search .uk-nav-divider {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #dddddd;
 }
 /*
  * Nested items
  */
 .uk-nav-search ul a {
-  color: #07D;
+  color: #0077dd;
 }
 .uk-nav-search ul a:hover {
-  color: #059;
+  color: #005599;
 }
 /* Search in offcanvas
  ========================================================================== */
@@ -170,20 +169,20 @@
   margin: 20px 15px;
 }
 .uk-offcanvas .uk-search:before {
-  color: #777;
+  color: #777777;
 }
 .uk-offcanvas .uk-search-field {
   width: 100%;
   border-color: rgba(0, 0, 0, 0);
   background: #1a1a1a;
-  color: #ccc;
+  color: #cccccc;
 }
 .uk-offcanvas .uk-search-field:-ms-input-placeholder {
-  color: #777 !important;
+  color: #777777 !important;
 }
 .uk-offcanvas .uk-search-field::-moz-placeholder {
-  color: #777;
+  color: #777777;
 }
 .uk-offcanvas .uk-search-field::-webkit-input-placeholder {
-  color: #777;
+  color: #777777;
 }
