--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10124,6 +10124,56 @@ h6 {
   margin: 1.5em 0;
 }
 /* Pics End */
+/* Working Start */
+#working {
+  padding-top: 1px;
+  padding-bottom: 100px;
+}
+#working h1 {
+  font-size: 48px;
+  color: #253c7f;
+  margin: 1.5em 0;
+}
+#working .tm-working-item {
+  width: 16%;
+  cursor: pointer;
+  position: relative;
+}
+#working .tm-working-item .tm-working-pic {
+  text-align: center;
+  padding-bottom: 30px;
+}
+#working .tm-working-item .tm-working-text {
+  text-align: center;
+  font-size: 24px;
+  line-height: 1.4em;
+  color: #344055;
+}
+#working .tm-working-item .tm-working-text i {
+  font-size: 14px;
+}
+#working .tm-working-item .tm-working-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#working .tm-working-item .tm-working-overlay .tm-working-overlay-top {
+  font-size: 24px;
+  text-align: center;
+  line-height: 1.4em;
+  padding-bottom: 10px;
+}
+#working .tm-working-item .tm-working-overlay .tm-working-overlay-top i {
+  font-size: 14px;
+}
+#working .tm-working-item .tm-working-overlay .tm-working-overlay-bottom {
+  font-size: 16px;
+  text-align: center;
+}
+/* Working End */
 /* Home Page End */
 /* Modal Start */
 .tm-modal {
