--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -953,6 +953,58 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 
 /* Pics End */
 
+/* Working Start */
+#working {
+  padding-top: 1px;
+  padding-bottom: 100px;
+  h1 {
+    font-size: 48px;
+    color: @text-primary-color;
+    margin: 1.5em 0;
+  }
+  .tm-working-item {
+    width: 16%;
+    cursor: pointer;
+    position: relative;
+    .tm-working-pic {
+      text-align: center;
+      padding-bottom: 30px;
+    }
+    .tm-working-text {
+      text-align: center;
+      font-size: 24px;
+      line-height: @global-line-height;
+      color: @global-color;
+      i {
+        font-size: 14px;
+      }
+    }
+    .tm-working-overlay {
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.7);
+      position: absolute;
+      top: 0;
+      left: 0;
+      .tm-working-overlay-top {
+        font-size: 24px;
+        text-align: center;
+        line-height: @global-line-height;
+        padding-bottom: 10px;
+        i {
+          font-size: 14px;
+        }
+      }
+      .tm-working-overlay-bottom {
+        font-size: 16px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+/* Working End */
+
 
 
 /* Home Page End */
