--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -22,6 +22,16 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'RobotoLight';
+  src: url("fonts/RobotoLight/RobotoLight.eot");
+  src: url("fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"),
+  url("fonts/RobotoLight/RobotoLight.woff") format("woff"),
+  url("fonts/RobotoLight/RobotoLight.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
 
 //
 // Typography
@@ -149,6 +159,7 @@
 @text-primary-color: #253c7f;
 @text-success-color: #087c65;
 @text-danger-color: #ea3d07;
+@text-light-color: #ffffff;
 
 
 
@@ -1005,6 +1016,72 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 
 /* Working End */
 
+
+/* madein Start */
+#madein {
+  padding-top: 1px;
+  background: #e3e4e4;
+  h1 {
+    font-size: 48px;
+    color: @text-primary-color;
+    margin: 1.5em 0;
+  }
+  .madein-list {
+    color: @text-primary-color;
+    font-size: 20px;
+    font-weight: bold;
+    width: 450px;
+    margin: 0 auto;
+    ul.madein-list-ul {
+      list-style: none;
+      li {
+        font-family: 'RobotoLight', sans-serif;
+        position: relative;
+        margin-bottom: 20px;
+        &:before {
+          content: '';
+          position: absolute;
+          width: 20px;
+          height: 20px;
+          top: 0;
+          left: -35px;
+          background-image: url(images/madein/elips.png);
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+  }
+  .madein-block-wrap {
+    padding-top: 20px;
+    .madein-block {
+      height: 200px;
+      width: 50%;
+      position: relative;
+      &.madein-block-pic {
+        img {
+          position: absolute;
+          bottom: 0;
+          transform: translate(60%);
+          width: 55%;
+        }
+      }
+      &.madein-block-text {
+        .madein-block-text-in {
+          padding: 20px;
+          background: #7e8684;
+          color: @text-light-color;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 60%;
+          font-size: 17px;
+        }
+      }
+    }
+  }
+}
+/* madein End */
 
 
 /* Home Page End */
