--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1071,9 +1071,9 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           padding: 20px;
           background: #7e8684;
           color: @text-light-color;
-          position: absolute;
+          /* position: absolute;
           top: 0;
-          left: 0;
+          left: 0; */
           width: 60%;
           font-size: 17px;
         }
@@ -1083,6 +1083,17 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 }
 /* madein End */
 
+/* vidblk Start */
+#vidblk {
+  padding-top: 150px;
+  padding-bottom: 100px;
+  h1 {
+    font-size: 48px;
+    color: @text-primary-color;
+    margin: 1.5em 0;
+  }
+}
+/* vidblk End */
 
 /* Home Page End */
 
