--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1074,7 +1074,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           /* position: absolute;
           top: 0;
           left: 0; */
-          width: 60%;
+          width: 500px;
           font-size: 17px;
         }
       }
@@ -1094,6 +1094,24 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   }
 }
 /* vidblk End */
+
+/* tpls Start */
+#tpls {
+  padding-top: 1px;
+  padding-bottom: 100px;
+  background: @block-primary-background;
+  h1 {
+    font-size: 48px;
+    color: @custom-text-contrast-color;
+    margin: 1.5em 0;
+  }
+  .tm-tpls-wrap {
+    img {
+      width: 100%;
+    }
+  }
+}
+/* tpls End */
 
 /* Home Page End */
 
