--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1132,6 +1132,100 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 }
 /* tpls End */
 
+/* GetInTouch Start */
+#git {
+  padding-top: 1px;
+  background: @block-secondary-background;
+  h1 {
+    font-size: 48px;
+    color: @custom-text-contrast-color;
+    margin: 1.5em 0;
+  }
+  .tm-git-wrap {
+    max-width: 1200px;
+    margin: 0 auto;
+    .tm-git-text {
+      width: 100%;
+      color: @text-light-color;
+      font-size: 18px;
+      line-height: @global-line-height;
+    }
+    .tm-git-form {
+      margin-top: 50px;
+      .tm-git-form-input {
+        width: 400px;
+        padding: 20px;
+        margin: 0 auto;
+        input{
+          &:not([type="checkbox"]) {
+            width: 400px;
+            border-radius: 5px;
+            border: 1px solid  #89959d;
+            background: #58667a;
+            font-size: 16px;
+            padding: 20px 10px;
+            color: #b2bccd;
+          }
+          &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            color: #b2bccd;
+          }
+          &::-moz-placeholder { /* Firefox 19+ */
+            color: #b2bccd;
+          }
+          &:-ms-input-placeholder { /* IE 10+ */
+            color: #b2bccd;
+          }
+          &:-moz-placeholder { /* Firefox 18- */
+            color: #b2bccd;
+          }
+          &#phone-checkbox {
+            margin-right: 0;
+          }
+        }
+        .jq-checkbox {
+          &.checked .jq-checkbox__div {
+            width: 17px;
+            height: 10px;
+            border-bottom: 2px solid #89959d;
+            border-left: 2px solid #89959d;
+          }
+          width: 25px;
+          height: 25px;
+          margin: 0 20px 0 0;
+          box-shadow: none;
+          background: #58667a;
+          border: 1px solid  #89959d;
+        }
+        label {
+          cursor: pointer;
+          color: #b2bccd;
+        }
+        button {
+          width: 400px;
+          height: 60px;
+          text-transform: uppercase;
+          color: #fff;
+          border: none;
+          background: #ea3d07;
+          border-radius: 5px;
+          font-size: 28px;
+          font-family: 'RobotoLight', sans-serif;
+          cursor: pointer;
+          outline: none;
+          &:hover {
+            background: rgba(234, 61, 7, .8);
+          }
+          &:active {
+            background: rgba(234, 61, 7, .5);
+          }
+        }
+      }
+    }
+  }
+}
+
+/* GetInTouch End */
+
 /* Home Page End */
 
 
