--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1226,6 +1226,31 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 
 /* GetInTouch End */
 
+/* Contacts End */
+#cont {
+  padding-top: 1px;
+  padding-bottom: 100px;
+  background: @block-secondary-background;
+  h1 {
+    font-size: 48px;
+    color: @custom-text-contrast-color;
+    margin: 1.5em 0;
+  }
+  .tm-cont-wrap {
+    max-width: 1200px;
+    margin: 0 auto;
+    .tm-cont-block {
+      .tm-cont-block-text {
+        font-family: 'RobotoLight', sans-serif;
+        font-size: 18px;
+        color: #e3e4e4;
+      }
+    }
+  }
+}
+/* Contacts End */
+
+
 /* Home Page End */
 
 
