--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -961,6 +961,9 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     color: @custom-text-contrast-color;
     margin: 1.5em 0;
   }
+  /* img {
+    width: 100%;
+  } */
 }
 
 /* Pics End */
@@ -975,7 +978,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     margin: 1.5em 0;
   }
   .tm-working-item {
-    width: 16%;
+    /* width: 16%; */
     cursor: pointer;
     position: relative;
     .tm-working-pic {
@@ -1249,6 +1252,16 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   }
 }
 /* Contacts End */
+
+/* Copy Start */
+#copy {
+  color: #cacdce;
+  font-size: 14px;
+  font-family: 'RobotoLight', sans-serif;
+  padding: 30px 0;
+  background: @block-secondary-background;
+}
+/* Copy End */
 
 
 /* Home Page End */
