--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -957,12 +957,9 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   #canvas {
     position: absolute; 
     right: 55px;
-    bottom: 80px;
-     height: 75%;
-    width: 85%; 
-    /* height: 300px;
-    width: 500px; */
-    /* z-index: 3; */
+    top: 65px;
+    height: 79%;
+    width: 85%;
     overflow: hidden;
   }
     .tm-canv-icon {
