--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -961,6 +961,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     height: 79%;
     width: 85%;
     overflow: hidden;
+    /* background-image: url(images/astam-img/top-slide-img-2.jpg); */
   }
     .tm-canv-icon {
       position: absolute;
@@ -993,6 +994,12 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         top: 185px;
         &:hover {
           color: #cb3000;
+        }
+      }
+      &.tm-cog {
+        top: 220px;
+        &:hover {
+          color: forestgreen;
         }
       }
     }
