--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -961,6 +961,8 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     height: 79%;
     width: 85%;
     overflow: hidden;
+    background-position: center;
+    background-size: 100% 100%;
     /* background-image: url(images/astam-img/top-slide-img-2.jpg); */
   }
     .tm-canv-icon {
@@ -978,13 +980,19 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           color: #cb3000;
         }
       }
-      &.tm-undo {
-        top: 125px;
+      &.tm-upload {
+        top: 220px;
         &:hover {
-          color: #253c7f;
+          color: lightpink;
         }
       }
-      &.tm-redo {
+      &.tm-download {
+        top: 250px;
+        &:hover {
+          color: lightgreen;
+        }
+      }
+      &.tm-save {
         top: 155px;
         &:hover {
           color: #253c7f;
@@ -996,8 +1004,9 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           color: #cb3000;
         }
       }
-      &.tm-cog {
-        top: 220px;
+      &.tm-check {
+        top: 125px;
+        /* top: 220px; */
         &:hover {
           color: forestgreen;
         }
