--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1033,6 +1033,20 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 
 /* Pics End */
 
+/* See-in modal Start*/
+#see-in {
+  .tm-see-pics {
+    position: relative;
+    .tm-ready {
+      position: absolute;
+      top: 50px;
+      left: calc(40% - 1px);
+      width: 20%;
+    }
+  }
+}
+/* See-in modal end */
+
 /* Working Start */
 #working {
   padding-top: 1px;
