--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -954,15 +954,66 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 /* Canvas Start */
 .canvas {
   position: relative;
+  height: 500px;
+  width: 885px;
+  background: #cecece;
+  .canvas-wrap {
+    height: 100%;
+    .tm-rul-wrap {
+      width: 100%;
+      background: @block-primary-background;
+      padding-top: 20px;
+      padding-left: 30px;
+      box-sizing: border-box;
+      .tm-ruler {
+        width: 38px;
+        height: 10px;
+        border-right: 2px solid  #fff;
+        position: relative;
+        span {
+          position: absolute;
+          top: -10px;
+          right: 2px;
+          color: #fff;
+          font-size: 12px;
+        }
+      }
+    }
+    .tm-canv-wrap {
+      .tm-rulv-wrap {
+        padding-left: 20px;
+        padding-top: 38px;
+        background: @block-primary-background;
+        min-height: 100%;
+        .tm-ruler {
+          border-top: 2px solid  #fff;
+          width: 10px;
+          height: 40px;
+          position: relative;
+          span {
+            position: absolute;
+            top: 0px;
+            left: -10px;
+            color: #fff;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
   #canvas {
-    position: absolute; 
+    /* position: absolute;  */
     right: 55px;
     top: 65px;
-    height: 79%;
-    width: 85%;
+    /* height: 79%;
+    width: 85%; */
+    height: 468px;
+    width: 800px;
     overflow: hidden;
     background-position: center;
     background-size: 100% 100%;
+    border: none !important;
+    box-shadow: inset 1px 1px 10px #333;
     /* background-image: url(images/astam-img/top-slide-img-2.jpg); */
   }
     .tm-canv-icon {
