--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1061,13 +1061,13 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
           color: #cb3000;
         }
       }
-      &.tm-upload {
+      &.tm-undo {
         top: 220px;
         &:hover {
           color: lightpink;
         }
       }
-      &.tm-download {
+      &.tm-redo {
         top: 250px;
         &:hover {
           color: lightgreen;
