--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -931,6 +931,46 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     color: @custom-title-color;
     margin: 1em 0;
   }
+  .tm-api, .js-file {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px;
+    background: @button-background;
+    border-radius: 5px;
+    color: @text-light-color;
+    font-size: 18px;
+    &:hover {
+      background: @button-primary-active-background;
+    }
+    &:active {
+      background: @button-primary-hover-background;
+    }
+  }
+  .tm-book {
+    width: 100%;
+    height: 60px;
+    text-transform: uppercase;
+    color: #fff;
+    border: none;
+    background: #ea3d07;
+    border-radius: 5px;
+    font-size: 28px;
+    font-family: 'RobotoLight', sans-serif;
+    cursor: pointer;
+    outline: none;
+    &:hover {
+      background: rgba(234, 61, 7, .8);
+    }
+    &:active {
+      background: rgba(234, 61, 7, .5);
+    }
+  }
+  .js-material, .js-covering, .js-underframe, .js-stylization {
+    width: 100%;
+  } 
 }
 .tm-constructor-wrap {
   .uk-form-label {
@@ -984,16 +1024,17 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 /* Canvas Start */
 .canvas {
   position: relative;
-  height: 500px;
-  width: 885px;
-  background: #cecece;
+  /* height: 500px; */
+  width: 925px;
+  background: #8e9593;
   .canvas-wrap {
-    height: 100%;
+     background: #8e9593; 
     .tm-rul-wrap {
       width: 100%;
       background: @block-primary-background;
       padding-top: 20px;
       padding-left: 30px;
+      margin-bottom: 38px;
       box-sizing: border-box;
       .tm-ruler {
         width: 38px;
@@ -1013,6 +1054,8 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       .tm-rulv-wrap {
         padding-left: 20px;
         padding-top: 36px;
+        margin-top: -38px;
+        margin-right: 38px;
         background: @block-primary-background;
         min-height: 100%;
         .tm-ruler {
@@ -1030,21 +1073,22 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         }
       }
     }
+    .tm-canv-bottom {
+      width: 100%;
+      height: 50px;
+      background: #cecece;
+    }
   }
   #canvas {
-    /* position: absolute;  */
     right: 55px;
     top: 65px;
-    /* height: 79%;
-    width: 85%; */
-    height: 468px;
+    height: 458px;
     width: 800px;
     overflow: hidden;
     background-position: center;
     background-size: 100% 100%;
     border: none !important;
     box-shadow: inset 1px 1px 10px #333;
-    /* background-image: url(images/astam-img/top-slide-img-2.jpg); */
   }
     .tm-canv-icon {
       position: absolute;
