--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1025,7 +1025,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 .canvas {
   position: relative;
   /* height: 500px; */
-  width: 925px;
+  width: 975px;
   background: #8e9593;
   .canvas-wrap {
      background: #8e9593; 
@@ -1037,6 +1037,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       margin-bottom: 38px;
       box-sizing: border-box;
       .tm-ruler {
+        border-bottom: 2px solid #fff;
         width: 38px;
         height: 10px;
         border-right: 2px solid  #fff;
@@ -1058,6 +1059,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         margin-right: 38px;
         background: @block-primary-background;
         min-height: 100%;
+        border-right: 2px solid #fff;
         .tm-ruler {
           border-top: 2px solid  #fff;
           width: 10px;
@@ -1075,8 +1077,27 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     }
     .tm-canv-bottom {
       width: 100%;
-      height: 50px;
       background: #cecece;
+      padding-top: 5px;
+      padding-bottom: 10px;
+      .tm-info {
+        font-size: 15px;
+        font-family: "RobotoLight", sans-serif;
+        font-weight: 400;
+        i {
+          padding-left: 12px;
+          padding-right: 8px;
+          color: #426ec7;
+        }
+        a {
+          color: #000;
+        }
+        &:last-child {
+          a {
+            margin-left: 10px;
+          }
+        }
+      }
     }
   }
   #canvas {
