--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -866,6 +866,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     width: 100%;
     z-index: 1;
     position: relative;
+    margin-top: 70px;
   }
   .tm-home-slideshow-nav {
     position: absolute;
@@ -931,6 +932,12 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     color: @custom-title-color;
     margin: 1em 0;
   }
+  .tm-constructor-top-wrap {
+    width: 890px;
+    margin: 0 auto;
+    padding: 10px;
+    display: none;
+  }
   .tm-api, .js-file {
     display: block;
     box-sizing: border-box;
@@ -973,6 +980,17 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   } 
 }
 .tm-constructor-wrap {
+  .tm-constructor-inwrap {
+    display: flex;
+    flex-direction: row-reverse;
+    .tm-constructor-left {
+      width: 40%;
+    }
+    .tm-constructor-right {
+      width: 60%;
+      margin-left: 30px;
+    }
+  }
   .uk-form-label {
     display: block;
     padding: 5px 0 14px;
@@ -1034,7 +1052,6 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       background: @block-primary-background;
       padding-top: 20px;
       padding-left: 30px;
-      margin-bottom: 38px;
       box-sizing: border-box;
       .tm-ruler {
         border-bottom: 2px solid #fff;
@@ -1055,15 +1072,13 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       .tm-rulv-wrap {
         padding-left: 20px;
         padding-top: 36px;
-        margin-top: -38px;
-        margin-right: 38px;
         background: @block-primary-background;
         min-height: 100%;
         border-right: 2px solid #fff;
         .tm-ruler {
           border-top: 2px solid  #fff;
           width: 10px;
-          height: 40px;
+          height: 38px;
           position: relative;
           span {
             position: absolute;
@@ -1081,7 +1096,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
       padding-top: 5px;
       padding-bottom: 10px;
       .tm-info {
-        font-size: 15px;
+        font-size: 13px;
         font-family: "RobotoLight", sans-serif;
         font-weight: 400;
         i {
@@ -1103,7 +1118,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   #canvas {
     right: 55px;
     top: 65px;
-    height: 458px;
+    height: 480px;
     width: 800px;
     overflow: hidden;
     background-position: center;
@@ -1552,9 +1567,54 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
 /* Inner Page End */
 
 
+@media screen and (max-width: 1550px) {
+  .tm-constructor-wrap {
+    .tm-constructor-inwrap {
+      .tm-constructor-right {
+        width: 890px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1500px) {
+  .tm-custom {
+    width: 100%;
+  }
+}
+ @media screen and (max-width: 1280px) {
+    #constructor .tm-constructor-top-wrap {
+      display: block;
+    }
+  .tm-constructor-wrap {
+    .tm-constructor-inwrap {
+      display: block;
+      .tm-constructor-left, .tm-constructor-right {
+        margin: 0 auto;
+      }
+      .tm-constructor-right {
+        margin-bottom: 50px;
+      }
+      .tm-constructor-left {
+        width: 975px;
+        margin-bottom: 50px;
+      }
+      .tm-custom {
+        width: 50%;
+      }
+    }
+  }
+} 
 @media screen and (max-width: 1300px) {
   #madein .madein-block-wrap .madein-block.madein-block-pic img {
     right: 50px;
+  }
+  .tm-constructor-wrap {
+    .tm-constructor-inwrap {
+      .tm-constructor-left {
+        width: 100%;
+        padding-right: 20px;
+      }
+    }
   }
 }
 @media screen and (max-width: 1100px) {
@@ -1570,6 +1630,11 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
   }
   #vidblk {
     padding-top: 0;
+  }
+}
+@media screen and (max-width: 960px) {
+  #constructor {
+    display: none;
   }
 }
 @media screen and (max-width: 768px) {
