--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10787,6 +10787,91 @@ h6 {
 }
 /* Range End */
 /* Inner Page Start */
+.tm-global-wrap {
+  margin: 0 auto;
+  max-width: 1920px;
+  /* Global-wrap end */
+}
+.tm-global-wrap aside {
+  width: 30%;
+  height: 100px;
+  background: #333;
+}
+.tm-global-wrap .tm-global-wrap-right {
+  /* SEC 1 start */
+  /* SEC 1 end */
+  /* SEC 2 start */
+  /* SEC 2 end */
+  /* SEC 3 start */
+  /* SEC 3 end */
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap {
+  position: relative;
+  font-family: 'RobotoLight', sans-serif;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-img {
+  position: relative;
+  z-index: 2;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-discont-text {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 44%;
+  color: #fe3a00;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action {
+  background: #fe3a00;
+  height: 120px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec1-wrap .tm-sec1-action p {
+  position: absolute;
+  /* left: 7%; */
+  width: 27%;
+  text-align: center;
+  bottom: 1vw;
+  color: #fff;
+  font-size: 34px;
+  font-weight: 300;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec2-wrap .tm-sec2-header {
+  font-size: 48px;
+  color: #253c7f;
+  margin: 1.5em 0;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec2-wrap .tm-sec2-text {
+  font-size: 16px;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec2-wrap .tm-sec2-text .tm-sec2-block {
+  float: right;
+  padding: 0 0 10px 10px;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-header {
+  font-size: 40px;
+  color: #253c7f;
+  margin: 1em 0;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-more {
+  width: 100%;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-more a {
+  color: #7e8684;
+}
+.tm-global-wrap .tm-global-wrap-right .tm-sec3-wrap .tm-sec3-tpls-wrap .tm-sec3-more a:after {
+  display: inline-block;
+  content: '';
+  border: 5px solid transparent;
+  border-left: 8px solid #7e8684;
+  margin-left: 10px;
+}
+/* Global end */
 /* Inner Page End */
 @media screen and (max-width: 1550px) {
   .tm-constructor-wrap .tm-constructor-inwrap .tm-constructor-right {
